[package]
name = "limit-bio-sars"
version = "2.4.1"
edition = "2025"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

limit-core = { path = "../limit-core" }
limit-storage = { path = "../limit-storage" }
