[package]
name = "limit-reflection"
version = "2.4.1"
edition = "2025"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = "0.4"

# Internal dependencies
limit-bio-sars = { path = "../limit-bio-sars" }
limit-benchmark = { path = "../limit-benchmark" }
limit-quantum = { path = "../limit-quantum" }
limit-hub = { path = "../limit-hub" }

[dev-dependencies]
